# tauri-nextjs-template

./: .eslintrc.json  .gitignore  .lintstagedrc.js  .node-version  .prettierrc.json  README.md  biome.json  eslint.config.mjs  index.html  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vitest.config.mts
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  frontend-lint.yml  frontend-test.yml  lint-js.yml  lint-rs.yml  rust-lint.yml  rust-test.yml  test-js.yml
pages/: index.tsx
src-tauri/: .gitignore  .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.test.tsx  page.tsx
src/components/: Card.tsx  RoundedButton.tsx
src/hooks/tauri/: shortcuts.ts
src/pages/: _app.tsx  index.tsx
